# dtl_2023_ozon_matching

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/features/brands/: test.parquet  train.parquet
data/features/categories/: test.parquet  train_chains.parquet
data/features/characteristics/: test.parquet
data/features/characteristics-extra/: test.parquet
data/features/colorbert/: test.parquet
data/features/colors/: test.parquet  train_chains.parquet
data/features/colors-extra/: test.parquet
data/features/compatible-devices/: test.parquet  train.parquet
data/features/names/: test.parquet
data/features/nn/: test.parquet
data/features/pictures/: test.parquet  train_chains.parquet
data/features/size/: test.parquet  train.parquet
data/features/tfidf-characteristics/: test.parquet  train.parquet  train_chains.parquet
data/features/tfidf-characteristics_attributes/: test.parquet  train.parquet  train_chains.parquet
data/features/tfidf-color_parsed/: test.parquet  train.parquet  train_chains.parquet
data/features/tfidf-name_norm_tokens/: test.parquet  train.parquet  train_chains.parquet
data/features/tfidf-name_tokens/: test.parquet  train.parquet  train_chains.parquet
data/features/titles/: test.parquet
data/features/variants/: test.parquet  train.parquet  train_chains.parquet
data/features/watch/: test.parquet  train.parquet
data/tfidf/characteristics/: value_to_index.jbl
data/tfidf/color_parsed/: matrix.npz  value_to_index.jbl
data/tfidf/name_norm_tokens/: value_to_index.jbl
experiments/v13/: feature-importances.json  metrics.json  submission.csv
final_solution/: README.md  inference.sh  train.sh
notebooks/: Adversarial.ipynb
ozon_matching/andrey_solution/: __main__.py  chains.py  dataset.py  io.py  utils.py
ozon_matching/andrey_solution/feature_engineering/: __init__.py  categories.py  characteristics.py  colors.py  names.py  pictures.py  tfidf.py  utils.py  variants.py
ozon_matching/andrey_solution/modeling/: __init__.py  catboost.py  config.py  validation.py  vw.py
ozon_matching/andrey_solution/preprocessing/: __init__.py  categories.py  pairs.py  products.py
ozon_matching/andrey_solution/workflows/: v1.sh  v10.sh  v11.sh  v12.sh  v13.sh  v14.sh  v15.sh  v16.sh  v17.sh  v18.sh  v2.sh  v3.sh  v4.sh  v5.sh  v6.sh  v7.sh  v8.sh  v9.sh
ozon_matching/cv/: adversarial.py  adversarial.sh
ozon_matching/kopatych_solution/: characteristics.py  classifier.py  colors.py  cv.py  data.py  features.py  metric.py  similarity.py  utils.py  workflow.py
ozon_matching/kopatych_solution/config/: model_cfg.py
ozon_matching/kopatych_solution/workflows/: version_1.sh  version_3.sh  version_5.sh  version_6.sh  version_7.sh  version_8.sh  workflow.py
ozon_matching/kopatych_solution/workflows/v11/: characteristics.py  classifier.py  cv.py  dag.sh  data.py  features.py  nlp.py  similarity.py  title.py
ozon_matching/kopatych_solution/workflows/v11_watch/: characteristics.py  classifier.py  cv.py  dag.sh  data.py  nlp.py  similarity.py  title.py
ozon_matching/sergey_solution/: multibert.ipynb  multibert.py  multibert_chstic.ipynb  multibert_chstic.py  multibert_chstic_sub.ipynb  multibert_chstic_sub.py  multibert_colors.ipynb  multibert_colors.py  multibert_colors_sub.ipynb  multibert_colors_sub.py  multibert_sub.ipynb  multibert_sub.py
