[tool.poetry]
name = "ozon-matching"
version = "0.1.0"
description = ""
authors = ["mmarin <mikhail.marin@sbermarket.ru>"]
readme = "README.md"
packages = [{include = "ozon_matching"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
polars = "^0.17.14"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
faiss-cpu = "^1.7.4"
pyarrow = "^12.0.0"
tqdm = "^4.65.0"
lightgbm = "^3.3.5"
catboost = "^1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
