[tool.poetry]
name = "ozon-matching"
version = "0.1.0"
description = ""
authors = ["mmarin <mikhail.marin@sbermarket.ru>"]
readme = "README.md"
packages = [{include = "ozon_matching"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
polars = "^0.17.14"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
faiss-cpu = "^1.7.4"
pyarrow = "^12.0.0"
tqdm = "^4.65.0"
lightgbm = "^3.3.5"
catboost = "^1.2"
typer-cli = "^0.0.13"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.3.2"
flake8 = "^4.0.1"
black = "^22.6.0"
autoflake = "^1.4"
mypy = "^0.961"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | python/notebooks
  )/
'''

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src/"]


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
